<resources>
    <string name="app_name">Adam</string>
    <string name="action_settings">Settings</string>
    <string name="alarm_type">Alarm type</string>
    <string name="alarm_oneTime">OneTime</string>
    <string name="alarm_everyday">Everyday</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alarm_time">%1$s : %2$s</string>
    <string name="time_picker_title">Time of alarm</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alarm_repeat_2">%d</string>
    <string name="alarm_monday">Mon</string>
    <string name="alarm_tuesday">Tue</string>
    <string name="alarm_wednesday">Wed</string>
    <string name="alarm_thursday">Thu</string>
    <string name="alarm_friday">Fri</string>
    <string name="alarm_saturday">Sat</string>
    <string name="alarm_sunday">Sun</string>
    <string name="alarm_mon_to_fri">Monday-Friday</string>
    <string name="alarm_time_textView">Time</string>
    <string name="alarm_vibration">Vibration</string>
    <string name="alarm_choose_days">Choose days</string>
    <string name="alarm_user_settings">User Settings</string>
    <string name="alarm_tap_to_off">Hold to off alarm</string>
    <string name="alarm_sound">Sound</string>
    <string name="alarm_volume">Volume</string>
    <string name="alarm_save">Save</string>
    <string name="alarm_settings">Alarm settings</string>
    <string name="alarm_list_of_sounds">List of sounds</string>
    <string name="alarm_default_name">no name</string>
    <string name="alarm_name_text">Name</string>
    <string name="alarm_rising_sound">Rising volume</string>
    <string name="alarm_nearest">Next alarm after %1$d d %2$d h %3$d m</string>
    <string name="alarm_no_alarms">No active alarms</string>
    <string name="good_morning">Good Morning Mode</string>
    <string name="hint_message">Type your message</string>
    <string name="friends_search_error">Some error here.Check your internet connection and try again later.</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <integer name="com_vk_sdk_AppId">6837745</integer>
</resources>
