<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSelectDays"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/selectAll" />

    <CheckBox
        android:id="@+id/chkSun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday" />

    <CheckBox
        android:id="@+id/chkMon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"/>

    <CheckBox
        android:id="@+id/chkTue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"/>

    <CheckBox
        android:id="@+id/chkWed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"/>

    <CheckBox
        android:id="@+id/chkThu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday"/>

    <CheckBox
        android:id="@+id/chkFri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday"/>

    <CheckBox
        android:id="@+id/chkSat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturday"/>

</LinearLayout>